<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="@dimen/dimen_width"
        android:layout_height="@dimen/dimen_height">
        <ImageView
            android:id="@+id/iv_music_list"
            android:layout_width="@dimen/dimen_width"
            android:layout_height="@dimen/dimen_height"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:visibility="gone"
            android:src="@drawable/ic_music_player" />

        <es.claucookie.miniequalizerlibrary.EqualizerView
            android:id="@+id/equalizer_view"
            android:padding="5dp"
            android:visibility="gone"
            android:layout_width="@dimen/dimen_width"
            android:layout_height="@dimen/dimen_height"/>

        <TextView
            android:id="@+id/position"
            android:layout_width="@dimen/dimen_width"
            android:layout_height="@dimen/dimen_height"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/_1"
            android:gravity="center"
            android:padding="5dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_music_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_toStartOf="@+id/more_vert"
        android:layout_toLeftOf="@+id/more_vert"
        android:layout_toEndOf="@id/relative"
        android:layout_toRightOf="@id/relative"
        android:singleLine="true"
        android:text="@string/title"
        android:textColor="@color/color_black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_music_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_music_name"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_toStartOf="@+id/more_vert"
        android:layout_toLeftOf="@+id/more_vert"
        android:layout_toEndOf="@id/relative"
        android:layout_toRightOf="@id/relative"
        android:singleLine="true"
        android:text="@string/subtitle"
        android:textColor="@color/gray_color"
        android:textSize="12sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/more_vert"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_vert"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
    <ImageView
        android:id="@+id/queue_music"
        android:padding="5dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_queue_music"
        android:layout_toStartOf="@id/more_vert"
        android:layout_toLeftOf="@id/more_vert"
        android:layout_marginEnd="20dp" />

</RelativeLayout>